Not much progress it seems when I add employees they sometimes go into the wrong repositories...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/tipout
-spring.datasource.username=tipout
-spring.datasource.password=stuff
+spring.datasource.url=jdbc:mysql://localhost:3306/${db}
+spring.datasource.username=${dbUserName}
+spring.datasource.password=${dbPassword}
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
