--- a/tipout-app/package.json
+++ b/tipout-app/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-select": "^5.0.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
