--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	implementation 'com.auth0:mvc-auth-commons:1.9.3'
+	implementation 'com.google.code.gson:gson:2.10.1'
 
 }
 
