One docker file down

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.11'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "com.bmuschko.docker-spring-boot-application" version "9.3.4"
 }
 
 group = 'com.tipout'
@@ -46,3 +47,12 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 targetCompatibility = JavaVersion.VERSION_16
+
+springBoot {
+	mainClass = "com.tipout.Tipout.TipoutApplication"
+}
+
+jar {
+	enabled = true
+	archiveClassifier = '' //use empty string
+}
