--- a/DockerFile
+++ b/DockerFile
@@ -12,5 +12,5 @@
 
 FROM eclipse-temurin:17-jdk-alpine
 EXPOSE 8080
-ADD target/Tipout-0.0.1-SNAPSHOT.jar Tipout-0.0.1-SNAPSHOT.jar
+ADD ./Tipout-0.0.1-SNAPSHOT.jar Tipout-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java","-jar","/Tipout-0.0.1-SNAPSHOT.jar"]
